# codejail-includes

./: .coverage  .coveragerc  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  eia.py  openedx.yaml  pylintrc  pylintrc_tweaks  pyproject.toml  pytest.ini  setup.py  tests_eia.py  tox.ini
.github/workflows/: ci.yml  pypi-publish.yml  release.yml
requirements/: base.in  base.txt  dev.txt  doc.txt  quality.in  quality.txt  test.in  test.txt
src/verifiers/: draganddrop.py  tests_draganddrop.py
verifiers/: draganddrop.py
