[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codejail-includes"
description = "Grading scripts, verifiers, and utilities for Open edX code jail problems"
readme = "README.rst"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
    {name = "edX", email = "oscm@edx.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "Python",
    "edx",
    "openedx",
    "codejail",
]
dependencies = []

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/openedx/codejail-includes"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "*.tests", "*.tests.*", "docs*"]

[tool.setuptools]
py-modules = ["eia"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"

[dependency-groups]
test-base = [
    "pytest",
    "pytest-cov",
]
test = [
    {include-group = "test-base"},
]
quality = [
    {include-group = "test"},
    "edx-lint",
    "isort",
    "pycodestyle",
    "pydocstyle",
    "pylint",
]
doc = [
    {include-group = "test"},
    "doc8",
    "sphinx-book-theme",
    "twine",
    "build",
    "Sphinx",
]
ci = [
    "tox",
    "tox-uv",
]
dev = [
    {include-group = "test"},
    {include-group = "quality"},
    {include-group = "doc"},
    {include-group = "ci"},
]

# uv configuration
# https://docs.astral.sh/uv/reference/settings/
[tool.uv]
package = true

# edx-lint uv constraint support
# https://github.com/openedx/edx-lint
#  DO NOT EDIT constraint-dependencies DIRECTLY.
#  This list is managed by `edx_lint write_uv_constraints`
#  and will be overwritten the next time `make upgrade` is run.
#  - GLOBAL constraints: edit edx_lint/files/common_constraints.txt
#  - REPO-SPECIFIC constraints: edit [tool.edx_lint].uv_constraints in this file
constraint-dependencies = [
    "Django<6.0",
    "elasticsearch<7.14.0",
]

[tool.edx_lint]
# This section is read by edx-lint; do not edit the constraint-dependencies directly.
uv_constraints = []

# Semantic Release configuration
# https://python-semantic-release.readthedocs.io/en/latest/configuration.html
[tool.semantic_release]
build_command = """
    export SETUPTOOLS_SCM_PRETEND_VERSION=$NEW_VERSION
    python -m build
"""

# Pytest configuration
# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov-report xml"
norecursedirs = [".* docs requirements"]
python_files = ["*tests_*"]

# Coverage configuration
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
source_pkgs = ["loncapa", "verifiers", "eia"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.isort]
include_trailing_comma = true
indent = "    "
line_length = 120
multi_line_output = 3
